# hpc-coveralls-testing2

./: .travis.yml  README.md  hpc-coveralls-testing.cabal
bench/: BenchAll.hs  BenchProblems.hs
src/: Main.hs  Util.hs
test/: TestAll.hs  TestProblems.hs
test0/: TestZero.hs
test1/: TestOne.hs
test2/: TestTwo.hs
test3/: TestThree.hs
