name:                hpc-coveralls-testing
version:             0.1.0.0
synopsis:            Dummy project used to test hpc-coveralls.
license:             BSD3
license-file:        LICENSE
author:              Guillaume Nargeot
maintainer:          guillaume@nargeot.com
copyright:           (c) 2014 Guillaume Nargeot
category:            Control
build-type:          Simple
cabal-version:       >= 1.8

source-repository head
  type: git
  location: git://github.com/guillaume-nargeot/hpc-coveralls-testing.git

library
  hs-source-dirs:  src
  exposed-modules: Util
  build-depends:   base < 5

test-suite test-zero
  hs-source-dirs: src, test0
  type:            exitcode-stdio-1.0
  main-is:         TestZero.hs
  build-depends:   base, containers, HUnit
  ghc-options:     -Wall

test-suite test-one
  hs-source-dirs: src, test1
  type:            exitcode-stdio-1.0
  main-is:         TestOne.hs
  build-depends:   base, containers, HUnit
  ghc-options:     -Wall

test-suite test-two
  hs-source-dirs:  src, test2
  type:            exitcode-stdio-1.0
  main-is:         TestTwo.hs
  build-depends:   base, containers, HUnit
  ghc-options:     -Wall

test-suite test-three
  hs-source-dirs:  src, test3
  type:            exitcode-stdio-1.0
  main-is:         TestThree.hs
  build-depends:   base, containers, HUnit
  ghc-options:     -Wall
